welcome.lessons.welcome.array.array123.Array123.scala.error
array123:9: error: value : is not a member of Int
		nums(indexOfValue(nums,2)):= 0
                                          ^